<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="heading"> My Nanodegree Apps!</string>
    <string name="spotify_steamer">Spotify Steamer</string>
    <string name="scores_app">Scores App</string>
    <string name="library_app">Library App</string>
    <string name="build_it_bigger">Build It Bigger</string>
    <string name="xyz_reader">XYZ Reader</string>
    <string name="capstone">Capstone : My Own App</string>
    <string name="action_settings">Settings</string>
</resources>
