<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:id="@+id/relative_layout">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/linear_layout"
        android:weightSum="1"
        android:background="@color/blue">

        <TextView
            android:layout_width="235dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/heading"
            android:id="@+id/text_nanodegree"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.06" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="216dp"
            android:layout_height="wrap_content"
            android:text="@string/spotify_steamer"
            android:id="@+id/button_spotify"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.06"
            android:background="@color/orange"
            android:layout_marginTop="10dp"
            android:onClick="show_spotify_toast"/>

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="216dp"
            android:layout_height="wrap_content"
            android:text="@string/scores_app"
            android:id="@+id/button_scores"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.06"
            android:background="@color/orange"
            android:layout_marginTop="10dp"
            android:onClick="show_scores_toast"/>

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="216dp"
            android:layout_height="wrap_content"
            android:text="@string/library_app"
            android:id="@+id/button_library"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.06"
            android:background="@color/orange"
            android:layout_marginTop="10dp"
            android:onClick="show_library_toast"/>

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="216dp"
            android:layout_height="wrap_content"
            android:text="@string/build_it_bigger"
            android:id="@+id/button_build"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.06"
            android:background="@color/orange"
            android:layout_marginTop="10dp"
            android:onClick="show_build_bigger_toast"/>

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="216dp"
            android:layout_height="wrap_content"
            android:text="@string/xyz_reader"
            android:id="@+id/button_xyz"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.06"
            android:background="@color/orange"
            android:layout_marginTop="10dp"
            android:onClick="show_xyz_toast"/>

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="216dp"
            android:layout_height="wrap_content"
            android:text="@string/capstone"
            android:id="@+id/button_capstone"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.06"
            android:background="@color/pink"
            android:layout_marginTop="10dp"
            android:onClick="show_capstone_toast"/>
    </LinearLayout>
</RelativeLayout>
